--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-CLOUD_NAME=de1n9ecvi
-CLOUD_API_KEY=562717431754964
-CLOUD_API_SECRET=TjWSaCQzvnTESPXAqXOpwSpZLmg
+CLOUD_NAME=medikuy
+CLOUD_API_KEY=969939877446417
+CLOUD_API_SECRET=KxVbOqZpqxXpMGSmWTzT8yMXdyI
